--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ iOSInjectionProject/
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode
 
 .DS_Store
+BlueBucksKiosk.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
